force-app/main/default/objects/Order/fields/DQM_Delivery_Notes__c.field-meta.xml
<CustomField>
    <fullName>DQM_Delivery_Notes__c</fullName>
    <inlineHelpText>Please enter more detail here if you selected no for standard DQM delivery.</inlineHelpText>
    <label>DQM Delivery Notes</label>
    <type>TextArea</type>
</CustomField>