force-app/main/default/objects/Order/fields/How_Many_DQM_s__c.field-meta.xml
<CustomField>
    <fullName>How_Many_DQM_s__c</fullName>
    <label>How Many DQM’s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>