force-app/main/default/objects/Order/fields/Standard_DQM_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Standard_DQM_Delivery__c</fullName>
    <label>Standard DQM Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>