force-app/main/default/objects/Order/recordTypes/Drivetech_Orders.recordType-meta.xml
<RecordType>
    <fullName>Drivetech_Orders</fullName>
    <active>true</active>
    <description>Created for Drivetech PRF forms May 2024</description>
    <label>Drivetech Orders</label>
</RecordType>